# j5

./: .editorconfig  .gitattributes  .gitignore  README.imported.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ros-ci.yml
docs/: BOM.md  CONTRIBUTING.md  LICENSES.md  README.md  SAFETY.md
docs/imported/j5_starter_20250808_163255/: BOM.md  CONTRIBUTING.md  SAFETY.md
electronics/: README.md
firmware/: README.md
mechanical/: README.md
ros_ws/: README.md
ros_ws/src/j5_bringup/: CMakeLists.txt  README.md  package.xml
ros_ws/src/j5_bringup/launch/: bringup.launch.py
ros_ws/src/j5_character/: CMakeLists.txt  package.xml
ros_ws/src/j5_facerig/: CMakeLists.txt  package.xml
ros_ws/src/j5_manipulation/: CMakeLists.txt  package.xml
ros_ws/src/j5_memory/: CMakeLists.txt  package.xml
ros_ws/src/j5_navigation/: CMakeLists.txt  package.xml
ros_ws/src/j5_perception/: CMakeLists.txt  package.xml
ros_ws/src/j5_sim/: CMakeLists.txt  package.xml
ros_ws/src/j5_voice/: CMakeLists.txt  package.xml  setup.cfg
ros_ws/src/j5_voice/j5_voice/: hello_node.py
scripts/: import_from_zip.ps1  new_repo_from_zip.ps1  setup_ros_windows.ps1
sim/isaac/: README.md
