<?xml version="1.0"?>
<package format="3">
  <name>j5_bringup</name>
  <version>0.0.1</version>
  <description>Launch and configuration for the J5 robot.</description>
  <maintainer email="devnull@example.com">J5 Team</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros2launch</exec_depend>
</package>
